Añadido timeout a la conexión, y diálogo de error si falla Añadida versión estática de estaciones para cuando falla la conexión Arreglos menores de código